compiler/testData/diagnostics/tests/typedefs/TypedefsUnsupported.kt
<!UNSUPPORTED!>type Foo = Any<!>

fun foo() {
    <!UNSUPPORTED!>type Bar = Any<!>
}